completed comparison page

--- a/WebVisualizations/Assets/comparison.html
+++ b/WebVisualizations/Assets/comparison.html
@@ -42,20 +42,54 @@
       </div>
     </div>
   </nav>
-
-  <div class="continer-lg">
-    
-
+  <br></br>
+  <div class="container-lg mt-large-12">
+  
     <div class="row">
 
-      <div class="col-md-12 col-lg-6">
+      <div class="col-md-6 col-lg-12">
         <h2>Comparison: Latitude vs X</h2>
-
-
       </div>
+    </div>
 
+    <div class="row">
+      <div class="col-md-6 col-lg-12">
+        <h6>Click on plot to get an in-depth analysis.</in-d></h6>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="col-sm-3 col-lg-6">
+        <br><h6>Latitude vs. Max Temperature (F)</h6>
+        <img width='400' src='../Visualiztions/Fig1.png'/></br>
+      </div>
+      <div class="col-sm-3 col-lg-6">
+        <br><h6>Latitude vs. Humidity</h6>
+        <img width='400'  src='../Visualiztions/Fig2.png'/></br>
+      </div>
+    </div>
 
+    <div class="row">
+      <div class="col-sm-3 col-lg-6">
+        <br><h6>Latitude vs. Cloudiness(%))</h6>
+        <img width='400' src='../Visualiztions/Fig3.png'/></br>
+      </div>
+      <div class="col-sm-3 col-lg-6">
+        <br><h6>Latitude vs. Wind Speed</h6>
+        <img width='400'  src='../Visualiztions/Fig4.png'/></br>
+      </div>
+    </div>
+
+    <br></br>
+
+    <div class="Row">
+      <div class="col-sm-6 col-lg-12">
+        <strong>Analysis:</strong>
+        <br></br>
+        <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In augue orci, imperdiet eu velit et, aliquet mollis nibh. Duis fringilla hendrerit enim eget ultrices. Vivamus ut condimentum justo. Ut bibendum tempor justo, nec tempor ligula hendrerit eget. In sodales maximus nisi quis lobortis. Sed vitae sodales augue, a convallis ipsum. Praesent quis tortor hendrerit, molestie elit et, aliquam magna.
+
+          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi metus felis, vehicula ac felis et, porta laoreet ex. Praesent vel consequat orci. Sed id convallis felis. Donec scelerisque nunc eget justo porta fermentum. Vivamus pellentesque odio ac efficitur egestas. Praesent fringilla tristique porttitor. Etiam sodales suscipit ipsum, sit amet facilisis erat tristique eget. In pretium et risus id convallis.</h6>
+      </div>
     </div>
 
 
