--- a/index.html
+++ b/index.html
@@ -55,35 +55,30 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-6 col-lg-12">
-        <h6>Click on plot to get an in-depth analysis.</in-d></h6>
-      </div>
-    </div>
+    
 
-    <div class="row">
+    <br><div class="row">
       <div class="col-sm-3 col-lg-6">
-        <br><h6>Latitude vs. Max Temperature (F)</h6>
-        <img width='400' src='WebVisualizations/Visualiztions/Fig1.png'/></br>
+        <h6>Latitude vs. Max Temperature (F)</h6>
+        <img src='WebVisualizations/Visualiztions/Fig2.png' class="img-fluid" alt="Responsive image"/>
       </div>
       <div class="col-sm-3 col-lg-6">
-        <br><h6>Latitude vs. Humidity</h6>
-        <img width='400'  src='WebVisualizations/Visualiztions/Fig2.png'/></br>
-      </div>
-    </div>
+        <h6>Latitude vs. Humidity (%)</h6>
+        <img src='WebVisualizations/Visualiztions/Fig1.png' class="img-fluid" alt="Responsive image"/>
+    </div></br>
 
-    <div class="row">
-      <div class="col-sm-3 col-lg-6">
-        <br><h6>Latitude vs. Cloudiness(%))</h6>
-        <img width='400' src='WebVisualizations/Visualiztions/Fig3.png'/></br>
-      </div>
-      <div class="col-sm-3 col-lg-6">
-        <br><h6>Latitude vs. Wind Speed</h6>
-        <img width='400'  src='WebVisualizations/Visualiztions/Fig4.png'/></br>
-      </div>
-    </div>
+    
 
-    <br></br>
+    <br><div class="row">
+      <div class="col-sm-3 col-lg-6">
+        <h6>Latitude vs. Cloudiness(%)</h6>
+        <img src='WebVisualizations/Visualiztions/Fig3.png' class="img-fluid" alt="Responsive image"/>
+      </div>
+      <div class="col-sm-3 col-lg-6">
+        <h6>Latitude vs. Wind Speed</h6>
+        <img src='WebVisualizations/Visualiztions/Fig4.png' class="img-fluid" alt="Responsive image"/>
+      </div>
+    </div></br>
 
     <div class="Row">
       <div class="col-sm-6 col-lg-12">
@@ -94,9 +89,6 @@
           Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Morbi metus felis, vehicula ac felis et, porta laoreet ex. Praesent vel consequat orci. Sed id convallis felis. Donec scelerisque nunc eget justo porta fermentum. Vivamus pellentesque odio ac efficitur egestas. Praesent fringilla tristique porttitor. Etiam sodales suscipit ipsum, sit amet facilisis erat tristique eget. In pretium et risus id convallis.</h6>
       </div>
     </div>
-
-
-
 
   </div>
 
